2014-06-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_api.php: Added the parameter
	"address resolution" to the functions
	"api_get_netflow_get_data" and "api_get_netflow_get_stats".

	* include/functions_netflow.php: Added the parameter
	"address resolution" to the functions "netflow_get_data",
	"netflow_get_stats", "netflow_get_summary",
	"netflow_get_record" and "netflow_draw_item".
	
	* operation/netflow/nf_live_view.php: Added an option to
	apply IP address resolution to the netflow searches.

2014-06-09  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/update_manager.js,
	include/functions_update_manager.php,
	include/ajax/update_manager.ajax.php, include/config_process.php:
	work in the first version of new update manager.

2014-06-09  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php, general/login_page.php: improved
	the source code style.
	
	* godmode/setup/os.builder.php: fixed the form.
	
	* godmode/update_manager_xxx/*, godmode/menu.php,
	include/functions_update_manager.php,
	include/ajax/update_manager.ajax.php,
	include/graphs/functions_gd.php, include/graphs/functions_flot.php,
	include/config_process.php, include/javascript/update_manager.js,
	include/javascript/jquery.knob.js,
	include/javascript/jquery.iframe-transport.js,
	include/javascript/jquery.fileupload.js, images/check-cross.png:
	first version of new update manager.

2014-06-09  Sergio Martin <sergio.martin@artica.es>

	* images/login_background.jpg
	images/login_background.png
	images/backgrounds/mosaico_diagonales_gris.png
	images/backgrounds/fondo_diente_leon_2000.jpg
	images/backgrounds/fondo_arena_2000.jpg
	images/backgrounds/fondo_madera_2000.jpg
	images/backgrounds/fondo_cielo_2000.jpg
	images/backgrounds/fondo_luna_2000.jpg
	images/backgrounds/fondo_paisaje_2000.jpg
	images/backgrounds/fondo_polen_2000.jpg
	images/backgrounds/fondo_cubos_2000.png
	include/styles/pandora.css: Added bunch of new login