@@ -1,3 +1,10 @@
+2014-06-10 Hirofumi Kosaka <kosaka@rworks.jp>
+
+	* operation/agentes/ver_agente.php,
+	godmode/massive/massive_delete_modules.php: Fixed bug that all
+	agents' module the user can view could be targets of deletion,
+	if the user has an AW privilege for any.
+
 2014-06-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
 	* include/functions_api.php: Added the parameter
